10/Homework/apps.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-v1
  namespace: lesson10
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
        version: v1
    spec:
      containers:
        - name: server
          image: server:v1.10
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-v2
  namespace: lesson10
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
        version: v2
    spec:
      containers:
        - name: server
          image: server:v1.10
---
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: lesson10
spec:
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
