10/Homework/vs_server_header.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: server
spec:
  hosts:
    - server
  http:
  - match:
    - headers:
        end-user:
          exact: department:qa
    route:
    - destination:
        host: server
        subset: v1
  - route:
    - destination:
        host: server
        subset: v2
