10/Homework/vs_server_lb.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: server
spec:
  hosts:
    - server
  http:
  - route:
    - destination:
        host: server
        subset: v1
      weight: 90 
    - destination:
        host: server
        subset: v2
      weight: 10
